# bms-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: CLAUDE.md  ci.yml  release.yml
src/: App.svelte  CLAUDE.md  app.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: CLAUDE.md
src-tauri/src/: CLAUDE.md  bms_parser.rs  bms_types.rs  can_handler.rs  commands.rs  itekon_handler.rs  lib.rs  main.rs
src/lib/components/: AlarmList.svelte  CLAUDE.md  DataCard.svelte  DebugLog.svelte  GaugeChart.svelte  ProgressBar.svelte  StatusPanel.svelte
src/lib/stores/: CLAUDE.md  bmsStore.svelte.ts  debugStore.svelte.ts
src/lib/types/: CLAUDE.md  bms.ts
