[package]
name = "bms-monitor"
version = "1.0.0"
description = "BMS Battery Monitor - CAN Bus Communication"
authors = ["BMS Monitor Team"]
edition = "2021"

[lib]
name = "bms_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
socketcan = { version = "3", optional = true }
serialport = "4"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
socketcan = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
socketcan = ["dep:socketcan"]
